updates to all css on home page to fix all of the breaks the merge with the other css files caused.

--- a/client/src/scss/reset.scss
+++ b/client/src/scss/reset.scss
@@ -9,7 +9,7 @@
  * Richard Clark (http://richclarkdesign.com)
  * http://cssreset.com
  */
-html, body, div, span, object, iframe,
+body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code,
 del, dfn, em, img, ins, kbd, q, samp,
